# Booster_Soccer_plan

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  databricks.yml  pyproject.toml  requirements.txt
.claude/agents/: databricks-rl-mentor.md
.claude/skills/sync-docs/: SKILL.md
.claude/templates/: adr-template.md  workflow-template.md
docs/: 01-environment-setup.md  02-mjx-training.md  03-finetuning-submission.md  04-tooling-integration.md  05-verification-gates.md  06-official-evaluation.md  07-databricks-mlops.md  README.md  progress.md  troubleshooting.md
docs/adr/: 0001-task-one-hot-7dim.md  README.md
docs/workflows/: README.md
notebooks/: train_on_databricks.py
scripts/: test_in_official_env.py
src/mjx/: __init__.py  preprocessor_jax.py  soccer_env.py
src/mjx/assets/: soccer_env.xml
src/notebooks/: 01_environment_validation.ipynb  02_xml_loading.ipynb  03_task_index_validation.ipynb  04_jax2torch_conversion.ipynb  05_official_env_validation.ipynb
src/training/: __init__.py  config.py  replay_buffer.py  sac_agent.py  train_sac.py
submission/: preprocessor.py
tests/: test_info_dimensions.py
