[project]
name = "Booster_Soccer_plan"
version = "0.1.0"
authors = [{ name = "adamlin@cheerstech.com.tw" }]
requires-python = ">=3.12"
dependencies = [
    # Core ML - JAX ecosystem
    "jax[cuda12]==0.4.38",
    "flax==0.10.2",
    "optax==0.2.4",

    # Physics simulation
    "mujoco==3.2.6",
    "mujoco-mjx==3.2.6",
    "brax==0.12.1",

    # PyTorch (for fine-tuning)
    "torch==2.6.0",

    # Data & utils
    "numpy==2.1.3",

    # Experiment tracking
    "wandb==0.19.1",
    "mlflow==2.19.0",

    # GPU monitoring
    "pynvml>=12.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 125
